Actualizar el perfil de Gustavo Barcos y el enlace a la hoja de estilo
Se corrigió el enlace de la hoja de estilos de 'style.css' a 'styles.css'. Se actualizó el rol y la descripción de Gustavo Barcos, y se corrigió el enlace del CV para que apunte al archivo PDF correcto.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>SeñApp - Talento Joven IT</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -24,9 +24,9 @@
 
     <section class="integrante">
       <h3>Gustavo Barcos</h3>
-      <p><strong>Rol:</strong> Programador; Supervisor</p>
-      <p>Poner descripción</p>
-      <a href="cvs/cvgustavo/" target="_blank">Ver CV</a>
+      <p><strong>Rol:</strong> Programador; Supervisor; Diseñador</p>
+      <p>Me dedico al diseño gráfico y la programación, poniendo en práctica algunas de mis habilidades como ilustrador</p>
+      <a href="cvs/cvgustavo/CvBarcosGustavo.pdf" target="_blank">Ver CV</a>
     </section>
 
         <section class="integrante">
